--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Registration Form</title>
 </head>
 <body>
-    <form>
+    <form id="form">
         <input type="text" id="Name" placeholder="Enter Your Name">
         <input type="text" id="Email" placeholder="Enter Your Email">
-        <input type="text" id="CNIC" placeholder="Enter Your CNIC">
+        <input type="text" id="Password" placeholder="Enter Your Password">
+        <input type="text" id="CNIC" placeholder="Enter Your CNIC, e.g : XXXXX-XXXXXXX-X">
         <input type="text" id="Age" placeholder="Enter Your Age">
         <button type="submit">Submit</button>
 
